# poc-agent-triage-medical

./: README.md
OC/ffe_agent_gcp/backend/: __init__.py  docker-compose.yml  main.py  pyproject.toml
OC/ffe_agent_gcp/backend/ffe_chess_agent/: agent.py
OC/ffe_agent_gcp/backend/tools/: __init__.py  milvus_tools.py  stockfish_tools.py  youtube_tools.py
poc-agent-triage-medical/: Dockerfile  pyproject.toml  requirements.txt
poc-agent-triage-medical/logs/: audit_medical.jsonl  events.out.tfevents.1781993079.macbook-air-4.home.35521.0
poc-agent-triage-medical/reports/metrics/: dataset_stats_summary.json  final_dpo_eval.json
poc-agent-triage-medical/reports/metrics/dpo/: Mpaga_Christophe_Logs_DPO_052026.csv
poc-agent-triage-medical/scripts/data_prep/: ai_studio_code.py  anonymize.py  audit_bilingual_final.py  audit_rgpd.py  balance_dataset.py  final_cleaner.py  final_processor.py  generate_descriptive_stats.py  load_data.py  prepare_dpo_final.py  prepare_dpo_split.py  process_all_datasets.py  split_dataset.py
poc-agent-triage-medical/scripts/deployment/: merge_model.py
poc-agent-triage-medical/scripts/evaluate/: evaluate_dpo.py  evaluate_sft_dpo.py  evaluate_val_set.py  quantitative_matrix.py
poc-agent-triage-medical/scripts/training/: train_sft.py  train_sft_m1.py  train_sft_mac.py
poc-agent-triage-medical/scripts/training/dpo/: train_dpo_final.py  (+1 more)
poc-agent-triage-medical/src/api/: app_demo.py  config.py  main.py  orchestrateur.py
poc-agent-triage-medical/tests/: test_api.py  test_quality.py
poc-agent-triage-medical/tests/api/: test_endpoints.py
(+64 files in other folders)
