[project]
name = "ffe-agent-gcp"
version = "0.1.0"
description = "Agent d'échecs expert FFE"
requires-python = ">=3.10"

dependencies = [
    "google-adk",
    "pymilvus",
    "python-chess",
    "google-api-python-client",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.2.0",
]

# Force Python et l'ADK à reconnaître le dossier local "agent"
[tool.setuptools.packages.find]
where = ["."]
include = ["agent", "tools"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    # Outils pour le "Function Calling"
    "langchain_google_genai",
    "langchain_core",
    "langgraph",
    "python-dotenv",
    # Outils pour l'Agent Google officiel
    "google-genai",
    ]
